# lbrx

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  README.pl.md  agent2.md  orchestrator_messages.md  whylbrx.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
agents/: agent3devstate.md
agents/initialPrompts/: agent1.md  agent3.md  orchestrator.md
agents/issues/: agent3conflicts.md
agents/phase2/: agent1_message.md  agent1response.md  agent2_message.md  agent3_message.md  agent3response.md
agents/phase2/orchestrator/: integration_plan.md  team_message.md
agents/teamMessages/: agent1devstate.md  agent2devstate.md  orchestrator_messages.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/dtype/: mod.rs  quantized.rs
crates/core/src/memory/: arena.rs  cache.rs  mmap.rs  mod.rs  pool.rs
crates/core/src/parallel/: mod.rs
crates/core/src/shape/: mod.rs
crates/core/src/tensor/: mod.rs  ops.rs  storage.rs  view.rs
crates/formats/: Cargo.toml
crates/formats/src/: lib.rs
crates/metal/: Cargo.toml
crates/metal/shaders/: Cargo.toml
crates/metal/shaders/src/: lib.rs
crates/metal/src/: buffer.rs  compute.rs  context.rs  lib.rs
src/: lib.rs
src/formats/: traits.rs
src/formats/safetensors/: mod.rs  reader.rs  writer.rs
